tests/test_files/errors/dot_huge.over
tup: (1 2 3)
dot: tup.348734701382471230498713241343*4134134
